import("//react-native/common.gni")
config("LibRNKeyEventModule_config") {
  cflags_cc = [ "-std=c++17","-g"]
  cflags_cc += [
    "-Wno-extra-semi",
    "-Wno-sign-compare",
    "-Wno-header-hygiene",
  ]

  include_dirs = [
    "./",
    "//react-native/ReactCommon/",
  ]
}

rns_cxx_tp_component("rnkeyevent") {

  # Native module and its dependencies
  sources = [
    "RNKeyEventModule.h",
    "RNKeyEventModule.cpp"
  ]

  public_configs = [ ":LibRNKeyEventModule_config" ]
  public_configs += [ "//build/secondary/folly:folly_config" ]
  deps = [
    "//folly",
    "//folly:async",
    "//folly:synchronization",
    "//skia",
    "//react-native/ReactCommon/callinvoker",
    "//react-native/ReactCommon/jsi:jsi",
    "//react-native/ReactCommon/react/nativemodule/core",
    "//react-native/ReactCommon/runtimeexecutor",
  ]

  with_exceptions = true
  with_rtti = true
}
